Improved the conveying of language changes and other semantic <span> changes

--- a/html/boss.html
+++ b/html/boss.html
@@ -137,7 +137,7 @@
                   ――場所――<br>
                   日木ヶ原の森　深い森
                 </p>
-                <p>※代名詞は「<ruby>私<rt>わたし</rt></ruby>」である。デーヴァナーガリー文字に「<span lang="sa" class="font-devanagari">सांप्रिय सकिदोरि</span>」を書く。ＩＡＳＴに「<span lang="sa-Latn" class="font-latin">Sāṃpriya Sakidori</span>」を書く。</p>
+                <p>※代名詞は「<ruby>私<rt>わたし</rt></ruby>」である。デーヴァナーガリー文字に「<span lang="sa" class="devanagari-font" title="Sanskrit text (Devanagari)">सांप्रिय सकिदोरि</span>」を書く。ＩＡＳＴに「<span lang="sa-Latn" class="latin-font" title="Sanskrit romanisation (IAST)">Sāṃpriya Sakidori</span>」を書く。</p>
               </div>
             </div>
           </section>
@@ -219,7 +219,7 @@
                   ――場所――<br>
                   神秘的な世界（ミノタウロスの迷宮）
                 </p>
-                <p>※代名詞は「ワシ」である。ギリシャ文字に「<span lang="el" class="font-greek">Θεονυμφή Αποστολοπούλου</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Theonumphḗ Apostolopoúlou</span>」を書く。</p>
+                <p>※代名詞は「ワシ」である。ギリシャ文字に「<span lang="el" class="greek-font" title="Greek text">Θεονυμφή Αποστολοπούλου</span>」を書く。ローマ字に「<span lang="el-Latn" class="latin-font" title="Greek romanisation">Theonumphḗ Apostolopoúlou</span>」を書く。</p>
               </div>
             </div>
           </section>
