--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -73,7 +73,7 @@
               <p>智識の瞳</p>
               <p>
                 アルクスニス・アリギルトス<br>
-                <span lang="lv" class="font-latin">Alksnis Aļģirts</span>
+                <span lang="lv" class="latin-font" title="Latvian text">Alksnis Aļģirts</span>
               </p>
               <p>
                 種族：さとり<br>
@@ -123,7 +123,7 @@
               <p>後悔の瞳</p>
               <p>
                 アルクスネ・キェルスタ<br>
-                <span lang="lv" class="font-latin">Alksne Ķersta</span>
+                <span lang="lv" class="latin-font" title="Latvian text">Alksne Ķersta</span>
               </p>
               <p>
                 種族：さとり<br>
@@ -173,7 +173,7 @@
               <p>性欲の瞳</p>
               <p>
                 アルクスネ・クリメンティーナ<br>
-                <span lang="lv" class="font-latin">Alksne Klimentīna</span>
+                <span lang="lv" class="latin-font" title="Latvian text">Alksne Klimentīna</span>
               </p>
               <p>
                 種族：さとり<br>
@@ -223,7 +223,7 @@
               <p>感情の瞳</p>
               <p>
                 アルクスネ・リーリヤ<br>
-                <span lang="lv" class="font-latin">Alksne Līrija</span>
+                <span lang="lv" class="latin-font" title="Latvian text">Alksne Līrija</span>
               </p>
               <p>
                 種族：さとり<br>
