--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -246,7 +246,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※チベット文字に「<span lang="bo" class="font-tibetan">ལྷུན་གུབ་ཀ་ལིང་པོང་ལྷུན་གྲུབ་ཀྱིད་ཏོད་པ་</span>」を書く。ワイリー方式に「lhun gub ka ling pong lhun grub kyid tod pa」を書く。</p>
+              <p>※チベット文字に「<span lang="bo" class="tibetan-font" title="Tibetan text">ལྷུན་གུབ་ཀ་ལིང་པོང་ལྷུན་གྲུབ་ཀྱིད་ཏོད་པ་</span>」を書く。ワイリー方式に「<span lang="bo-Latn" class="latin-font" title="(Extended) Wylie romanisation">lhun gub ka ling pong lhun grub kyid tod pa</span>」を書く。</p>
             </div>
           </section>
           <!-- 三ツ木姫娘（Himeko Mitsugi） -->
@@ -441,7 +441,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※ギリシャ文字に「<span lang="el" class="font-greek">Κορώνη Καρασουγαχάρα</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Korṓnē Karasougakhára</span>」を書く。</p>
+              <p>※ギリシャ文字に「<span lang="el" class="greek-font" title="Greek text">Κορώνη Καρασουγαχάρα</span>」を書く。ローマ字に「<span lang="el-Latn" class="latin-font" title="Greek romanisation">Korṓnē Karasougakhára</span>」を書く。</p>
             </div>
           </section>
           <!-- 蜘蛛沙羅禁如（Kinnyo Kumosara） -->
