--- a/html/monster.html
+++ b/html/monster.html
@@ -542,7 +542,7 @@
               ――場所――<br>
               ？
             </p>
-            <p>※デーヴァナーガリー文字に「<span lang="sa" class="font-devanagari">राक्षस</span>」を書く。ＩＡＳＴに「<span lang="sa-Latn" class="font-latin">Rākṣasa</span>」を書く。</p>
+            <p>※デーヴァナーガリー文字に「<span lang="sa" class="devanagari-font" title="Sanskrit text (Devanagari)">राक्षस</span>」を書く。ＩＡＳＴに「<span lang="sa-Latn" class="latin-font" title="Sanskrit romanisation (IAST)">Rākṣasa</span>」を書く。</p>
           </div>
         </div>
       </section>
