--- a/html/nizi.html
+++ b/html/nizi.html
@@ -223,7 +223,7 @@
                 </p>
                 <p>噛むと他人を狼獣に変える事ができる<ruby>半狐半狸<rt>ハーフブラッド</rt></ruby>である。名前はチベット語で「キツネ」を意味する。</p>
                 <p>かつては郷鬼に敵対的だったが、その後は落ち着いてきた。ちなみに、通称にある「保護者」は自称であるよ。</p>
-                <p>※チベット文字に「<span lang="bo" class="font-tibetan">ཝ་མོ་</span>」を書く。ワイリー方式に「<span lang="bo-Latn" class="font-latin">wa mo</span>」を書く。</p>
+                <p>※チベット文字に「<span lang="bo" class="tibetan-font" title="Tibetan text">ཝ་མོ་</span>」を書く。ワイリー方式に「<span lang="bo-Latn" class="latin-font" title="(Extended) Wylie romanisation">wa mo</span>」を書く。</p>
                 <br>
                 <a href="./gallery/nizi/Wamo.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
@@ -501,7 +501,7 @@
                   誕生日：不明<br>
                   年齢：不明
                 </p>
-                <p>アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عَيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿAyn</span>」を書く。</p>
+                <p>アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنعَيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʿAyn</span>」を書く。</p>
                 <br>
                 <a href="./gallery/nizi/ʿAyn.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
@@ -553,7 +553,7 @@
                   代名詞：奴（they/them）<br>
                   雌雄性：ストレート
                 </p>
-                <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Болормаа</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠪᠣᠯᠣᠷᠮᠠ</span>」を書く。</p>
+                <p>※キリル文字に「<span lang="mn" class="cyrillic-font" title="Mongolian text (Cyrillic)">Болормаа</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="mongolian-font mongolian-texts" title="Traditional Mongolian text">ᠪᠣᠯᠣᠷᠮᠠ</span>」を書く。</p>
                 <br>
                 <a href="./gallery/nizi/Bolormaa.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
@@ -678,31 +678,31 @@
                 <p>病気のせいで、錯誤は医学的に一人で生活する事ができず、今も両親と暮らしている。また、住み込みの看護師がいて、錯誤が薬を飲んでいる事を確認し（かわいそうな少女は様々な理由で少なくとも２０種類の薬を服用している）、サイバネティックコンポーネント（特に脳と心臓は、手術が必要なため、病院に連れて行ってメンテナンスできるように、重い鎮静剤が必要である）のメンテナンスを手伝ってくれる。しかし、主に寝室にこもり、普段は様々なＣＳプロジェクトに没頭している。</p>
                 <p>錯誤のコード解析能力は<ruby>計り知れない速さ<rt>はなはだはやい</rt></ruby>で、誰にも気づかれずにバグを見つけて対処できる為、仕事に役立っている。</p>
                 <p>何をするにしても、<strong>彼女に<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>について尋ねないでください</strong>。なぜなら、そのことについて話すのをやめないからだ。</p>
-                <p>錯誤の脳は本質的にミニコンピューターである為、これはいくつかのかなり興味深い癖をもたらす。たとえば、錯誤は、ステレオタイプ化やその他の素早い思考を物理的に行う事ができない。彼女の思考は全てゆっくりと論理的であり、コンピューター科学とサイバネティック科学がどのように機能するかについて深い理解につながる。この癖はまた、錯誤を<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>に助けます（つまり、実際に彼女の直感の物理的な欠如のために量子力学と天体物理学を非常によく理解しており、彼女が様々な科学を効率的に理解できるようにする）。しかし、錯誤は<ruby>多元的な存在<rt>プルラリティ</rt></ruby>も経験しており、現在４人の<ruby>分身<rt>アルター</rt></ruby>がいる。この<ruby>分身<rt>アルター</rt></ruby>は：<ruby>主人<rt>ホスト</rt></ruby>の錯誤（好んだ代名詞は彼女／いずれかの代名詞である）と<ruby>新星<rt>しんせい</rt></ruby>（好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>である）とタモードヴァーラム（マラヤーラム語「<span lang="ml" class="font-malayalam">തമോദ്വാരം</span>」、好んだ代名詞は奴である）と<ruby>佰萬<rt>ひゃくまん</rt></ruby>（好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>である）。現在彼女の<ruby>多元的な存在<rt>プルラリティ</rt></ruby>の原因は、錯誤以外の誰にも知られていない。眼の色を制御する為のコードは、誰が利便性の問題としてフロントしているかを示すのに役立ちます（錯誤はソースコードを自分で書いた）。</p>
+                <p>錯誤の脳は本質的にミニコンピューターである為、これはいくつかのかなり興味深い癖をもたらす。たとえば、錯誤は、ステレオタイプ化やその他の素早い思考を物理的に行う事ができない。彼女の思考は全てゆっくりと論理的であり、コンピューター科学とサイバネティック科学がどのように機能するかについて深い理解につながる。この癖はまた、錯誤を<ruby>現在興味<rt>ハイパーフィクセイション</rt></ruby>に助けます（つまり、実際に彼女の直感の物理的な欠如のために量子力学と天体物理学を非常によく理解しており、彼女が様々な科学を効率的に理解できるようにする）。しかし、錯誤は<ruby>多元的な存在<rt>プルラリティ</rt></ruby>も経験しており、現在４人の<ruby>分身<rt>アルター</rt></ruby>がいる。この<ruby>分身<rt>アルター</rt></ruby>は：<ruby>主人<rt>ホスト</rt></ruby>の錯誤（好んだ代名詞は彼女／いずれかの代名詞である）と<ruby>新星<rt>しんせい</rt></ruby>（好んだ代名詞は<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ゼル</rt></ruby>である）とタモードヴァーラム（マラヤーラム語「<span lang="ml" class="malayalam-font" title="Malayalam text">തമോദ്വാരം</span>」、好んだ代名詞は奴である）と<ruby>佰萬<rt>ひゃくまん</rt></ruby>（好んだ代名詞は<ruby>奴<rt>イト</rt></ruby>／<ruby>奴<rt>イツ</rt></ruby>である）。現在彼女の<ruby>多元的な存在<rt>プルラリティ</rt></ruby>の原因は、錯誤以外の誰にも知られていない。眼の色を制御する為のコードは、誰が利便性の問題としてフロントしているかを示すのに役立ちます（錯誤はソースコードを自分で書いた）。</p>
                 <p>健康上の理由で学校を中退せざるを得なくなる前、錯誤の最高の科目は数学と科学であった。最悪の科目は、様々な肺の問題と喉の問題に起因する言語障害のために、実際には国語であった。それを補う為に、普段はオンラインチャットや手話でコミュニケーションをとっている。錯誤は手話を使うが、聴覚はほとんどのドラゴンよりも鋭いである。皮肉なことに、言語障害にもかかわらず、多くの言語に非常に堪能であるという事である。</p>
                 <p>錯誤が抱えている健康上の問題と状態の非網羅的なリスト：<ruby>龍筋肉悪化症<rt>りゅうきんにくあっかしょう</rt></ruby>（筋肉を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と<ruby>龍内臓悪化症<rt>りゅうないぞうあっかしょう</rt></ruby>（内臓を悪化させるドラゴンの変性疾患である。サイバネティック・インプラントのない末期症状である）と自閉症とＡＤＨＤと尿失禁と便失禁（おむつを必要とし、筋肉が悪化する事によって引き起こされる）と腰脊髄麻痺（車椅子を必要とする）と喘息（主に肺内のサイバネティック・インプラントのおかげで対処されている）と深刻なてんかん（脳が人工であるにも関わらず。脳にはセンサーが内蔵されており、発作が起きるたびに看護師に警告を発す）と軽度な光過敏性（太陽の下で外出すると極端な偏頭痛を起こす）とビタミンＤ欠乏症（日光にさらされない為）と完全な免疫不全（いつも寝屋にとどまる理由の一部である）と様々な喉の問題（その結果、恒久的な栄養チューブを持ち、多くの音声障害を発症した）と不安障害など。</p>
-                <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Cuòwù</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Tsʻo<sup>4</sup>-wu<sup>5</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Tsuoh.wuh</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">錯誤</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">错误</span>」で書く。</p>
+                <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="latin-font" title="Pinyin">Cuòwù</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font" title="Wade-Giles">Tsʻo<sup>4</sup>-wu<sup>5</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font" title="Gwoyeu Romatzyh">Tsuoh.wuh</span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">錯誤</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">错误</span>」で書く。</p>
                 <!-- 新星（Xīnxīng｜新星｜新星） -->
                 <p>——新星について</p>
                 <p>
                   新星（しんせい）<br>
                   Xinxing
                 </p>
-                <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Xīnxīng</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Hsin<sup>1</sup>-hsing<sup>1</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Shinshing</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">新星</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">新星</span>」で書く。</p>
+                <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="latin-font" title="Pinyin">Xīnxīng</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font" title="Wade-Giles">Hsin<sup>1</sup>-hsing<sup>1</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font" title="Gwoyeu Romatzyh">Shinshing</span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">新星</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">新星</span>」で書く。</p>
                 <!-- タモードヴァーラム（Tamodvaram｜തമോദ്വാരം｜Tamōdvāraṁ） -->
                 <p>——タモードヴァーラムについて</p>
                 <p>
                   タモードヴァーラム<br>
                   Tamodvaram
                 </p>
-                <p>※代名詞は「」である。マラヤーラム文字に「<span lang="ml" class="font-malayalam">തമോദ്വാരം</span>」で書く。</p>
+                <p>※代名詞は「」である。マラヤーラム文字に「<span lang="ml" class="malayalam-font" title="Malayalam text">തമോദ്വാരം</span>」で書く。</p>
                 <!-- 佰萬（Bǎiwàn｜佰萬｜佰万） -->
                 <p>——佰萬について</p>
                 <p>
                   佰萬（ひゃくまん）<br>
                   Baiwan
                 </p>
-                <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Bǎiwàn</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Pai<sup>3</sup>-wan<sup>4</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Baewann</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">佰萬</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">佰万</span>」で書く。</p>
+                <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="latin-font" title="Pinyin">Bǎiwàn</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font" title="Wade-Giles">Pai<sup>3</sup>-wan<sup>4</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font" title="Gwoyeu Romatzyh">Baewann</span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">佰萬</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">佰万</span>」で書く。</p>
                 <br>
                 <a href="./gallery/nizi/Cuòwù.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
@@ -771,13 +771,13 @@
                   誕生日：<br>
                   年齢：
                 </p>
-                <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="background-color: #FBD569; color: #241F31;">金色</span>である。</p>
+                <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span class="normal-hap-is-golden-yellow">金色</span>である。</p>
                 <p>
                   見た色：<br>
-                  <span style="background-color: #FBD569; color: #241F31;">通常（金色）</span><br>
-                  <span style="background-color: #F995B9; color: #241F31;">気持ちいい（ピンク）</span><br>
-                  <span style="background-color: #E9934E; color: #241F31;">怒り（オレンジ色）</span><br>
-                  <span style="background-color: #77C8D1; color: #241F31;">悲しみ（明るい青）</span>
+                  <span class="normal-hap-is-golden-yellow">通常（金色）</span><br>
+                  <span class="happy-hap-is-pink">気持ちいい（ピンク）</span><br>
+                  <span class="angry-hap-is-orange">怒り（オレンジ色）</span><br>
+                  <span class="sad-hap-is-light-blue">悲しみ（明るい青）</span>
                 </p>
                 <br>
                 <a href="./gallery/nizi/Hap_P._Emo-shun.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
@@ -911,7 +911,7 @@
                   年齢：
                 </p>
                 <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
-                <p>※グルジア文字に「<span lang="ka" class="font-georgian">ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი</span>」で書く。</p>
+                <p>※グルジア文字に「<span lang="ka" class="georgian-font" title="Georgian text">ელისაბედ ხიდირბეგიშვილი-გარსევანიშვილი-ფირცხალაიშვილი</span>」で書く。</p>
                 <br>
                 <a href="./gallery/nizi/Elisabed_Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
@@ -969,7 +969,7 @@
                   年齢：
                 </p>
                 <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
-                <p>※キリル文字に「<span lang="uk" class="font-cyrillic">Олга Юхимівна Литвина-Костюченко</span>」で書く。</p>
+                <p>※キリル文字に「<span lang="uk" class="cyrillic-font" title="Ukrainian text">Олга Юхимівна Литвина-Костюченко</span>」で書く。</p>
                 <br>
                 <a href="./gallery/nizi/Olha_Yukhymivna_Lytvyna-Kostyuchenko.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
@@ -1027,7 +1027,7 @@
                   年齢：
                 </p>
                 <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
-                <p>※ハングルに「<span lang="ko" class="font-hangul">맹성희</span>」と<ruby>漢字<rt>ハンジャ</rt></ruby>に「<span lang="ko-Hani" class="font-hanja">孟聖姬</span>」で書く。</p>
+                <p>※ハングルに「<span lang="ko" class="hangul-font" title="Korean text (Hangul)">맹성희</span>」と<ruby>漢字<rt>ハンジャ</rt></ruby>に「<span lang="ko-Hani" class="hanja-font" title="Korean text (Hanja)">孟聖姬</span>」で書く。</p>
                 <br>
                 <a href="./gallery/nizi/Maeng_Song-Hee.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
@@ -1141,7 +1141,7 @@
                   年齢：
                 </p>
                 <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
-                <p>※キリル文字に「<span lang="ru" class="font-cyrillic">Ильинишна Макаровна Образцова-Случевская</span>」で書く。</p>
+                <p>※キリル文字に「<span lang="ru" class="cyrillic-font" title="Russian text">Ильинишна Макаровна Образцова-Случевская</span>」で書く。</p>
                 <br>
                 <a href="./gallery/nizi/Ilyinishna_Makarovna_Obraztsova-Sluchevskaya.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
@@ -1198,7 +1198,7 @@
                   年齢：
                 </p>
                 <p><ruby>郷鬼<rt>あたし</rt></ruby>の１人の式神である。</p>
-                <p>※ビルマ文字に「<span lang="my" class="font-myanmar">စန္ဒာခိုင်သိင်္ဂီထက်</span>」で書く。MLCTS式に「<span lang="my-Latn" class="font-latin">Canda Hkuing Singgi Htak</span>」で書く。</p>
+                <p>※ビルマ文字に「<span lang="my" class="burmese-font" title="Burmese text">စန္ဒာခိုင်သိင်္ဂီထက်</span>」で書く。MLCTS式に「<span lang="my-Latn" class="latin-font" title="Burmese romanisation (MLCTS)">Canda Hkuing Singgi Htak</span>」で書く。</p>
                 <br>
                 <a href="./gallery/nizi/Sanda_Khaing_Theingi_Htet.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
