--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -106,7 +106,7 @@
             </p>
             <p>
               ※代名詞は「あたい」である。<br>
-              『com』使用のたとえば：「<span class="oblique">Com</span> is talking with <span class="oblique">cometself</span> about <span class="oblique">comets</span> day. But who is answering <span class="oblique">comet</span>, though?」
+              『com』使用のたとえば：「<span class="neopronoun-demo"><em>Com</em> is talking with <em>cometself</em> about <em>comets</em> day. But who is answering <em>comet</em>, though?</span>」
             </p>
           </div>
         </div>
@@ -197,7 +197,7 @@
             <p><ruby>地獄の王様<rt>ヘーレンケーニグ</rt></ruby></p>
             <p>
               ヴィルヘルミナ・ベットガー・エーレンライヒ<br>
-              <span lang="de">Wilhelmina Böttger Ehrenreich</span>
+              <span lang="de" title="German text">Wilhelmina Böttger Ehrenreich</span>
             </p>
             <p>
               種族：魔人<br>
@@ -349,7 +349,7 @@
             <p>大臣の忠実な犬少女</p>
             <p>
               リビェナ・クリージョヴァー＝マハーチュコヴァー<br>
-              <span lang="cs">Liběna Křížová-Macháčková</span>
+              <span lang="cs" title="Czech text">Liběna Křížová-Macháčková</span>
             </p>
             <p>
               種族：犬の妖怪（使い魔）<br>
@@ -515,7 +515,7 @@
             </div>
             <p>
               ラインハルト・シッケンダンツ<br>
-              <span lang="de">Reinhard Schickendantz</span>
+              <span lang="de" title="German text">Reinhard Schickendantz</span>
             </p>
             <p>
               種族：魔人<br>
@@ -582,7 +582,7 @@
             </p>
             <p>家族：</p>
             <p>ライラックの一匹使い魔である。臭鼬悟貍が生まれた。</p>
-            <p>※代名詞は「？」である。ピンインに「<span lang="zh-Latn" class="font-latin">Chòuyòu Wùlí</span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Chowyow Wuhli</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Chʻou<sup>4</sup>-yu<sup>4</sup> Wu<sup>4</sup>-li<sup>2</sup></span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">臭鼬悟貍</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">臭鼬悟狸</span>」で書く。</p>
+            <p>※代名詞は「？」である。ピンインに「<span lang="zh-Latn" class="latin-font">Chòuyòu Wùlí</span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font">Chowyow Wuhli</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font">Chʻou<sup>4</sup>-yu<sup>4</sup> Wu<sup>4</sup>-li<sup>2</sup></span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">臭鼬悟貍</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">臭鼬悟狸</span>」で書く。</p>
           </div>
         </div>
       </section>
