--- a/html/pride.html
+++ b/html/pride.html
@@ -53,21 +53,19 @@
               <div class="containment-unit">
                 <h2 id="Pride">プライド</h2><hr>
                 <div class="pride-color">
-                  <p>
-                    <span style="background-color: #e30915; color: white;">#E30915</span><br>
-                    <span style="background-color: #f18b15; color: white;">#F18B15</span><br>
-                    <span style="background-color: #efe721; color: black;">#EFE721</span><br>
-                    <span style="background-color: #77b729; color: white;">#77B729</span><br>
-                    <span style="background-color: #2c56a5; color: white;">#2C56A5</span><br>
-                    <span style="background-color: #702182; color: white;">#702182</span><br>
-                    <span style="background-color: #000000; color: white;">#000000</span><br>
-                    <span style="background-color: #955514; color: white;">#955514</span><br>
-                    <span style="background-color: #7acde5; color: black;">#7ACDE5</span><br>
-                    <span style="background-color: #f3adc7; color: black;">#F3ADC7</span><br>
-                    <span style="background-color: #ffffff; color: black;">#FFFFFF</span><br>
-                    <span style="background-color: #fdd815; color: black;">#FDD815</span><br>
-                    <span style="background-color: #6a328c; color: white;">#6A328C</span>
-                  </p>
+                  <div class="progress-red">Red: #E30915</div>
+                  <div class="progress-orange">Orange: #F18B15</div>
+                  <div class="progress-yellow">Yellow: #EFE721</div>
+                  <div class="progress-green">Green: #77B729</div>
+                  <div class="progress-dark-blue">Dark blue: #2C56A5</div>
+                  <div class="progress-dark-violet">Dark violet: #702182</div>
+                  <div class="progress-black">Black: #000000</div>
+                  <div class="progress-brown">Brown: #955514</div>
+                  <div class="progress-light-blue">Light blue: #7ACDE5</div>
+                  <div class="progress-pink">Pink: #F3ADC7</div>
+                  <div class="progress-white">White: #FFFFFF</div>
+                  <div class="progress-gold">Gold: #FDD815</div>
+                  <div class="progress-light-violet">Light violet: #6A328C</div>
                 </div>
                 <div class="pride-display">
                   <div class="container">
