--- a/html/qarya_al-arnabu.html
+++ b/html/qarya_al-arnabu.html
@@ -126,7 +126,7 @@
               </p>
               <p>家族：</p>
               <p>ウサギの里に住む女神である。</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عَلْآع</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿAlʾāʿ</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنعَلْآع</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʿAlʾāʿ</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -180,7 +180,7 @@
               </p>
               <p>家族：</p>
               <p>ウサギの里の村長である。</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">غَالِبَة اِبْنَت جَفَر اِبْن أَمَانُ ٱللّٰه اِبْن فَرَجَلَّة اِبْن عَفِيف اِبْن مُسَدِّيق اِبْن إِزَّدِّين اِبْن مُتَمَّم اِلْأَبْدِلْرَحْمَن</span>」と「<span lang="ar" dir="rtl" class="font-naskh">غَالِبَة اَلْقُوَدْرِيَّة</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Ġālibah ibnat Jafar ibn ʾAmānu llāh ibn Farajallah ibn ʿAfīf ibn Musaddīq ibn ʾIzzaddīn ibn Mutammam il-ʾAbdilraḥman</span>」と「<span lang="ar-Latn" class="font-latin">Ġālibah al-Quwadrīyyah</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنغَالِبَة اِبْنَت جَفَر اِبْن أَمَانُ ٱللّٰه اِبْن فَرَجَلَّة اِبْن عَفِيف اِبْن مُسَدِّيق اِبْن إِزَّدِّين اِبْن مُتَمَّم اِلْأَبْدِلْرَحْمَن</span>」と「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنغَالِبَة اَلْقُوَدْرِيَّة</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Ġālibah ibnat Jafar ibn ʾAmānu llāh ibn Farajallah ibn ʿAfīf ibn Musaddīq ibn ʾIzzaddīn ibn Mutammam il-ʾAbdilraḥman</span>」と「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Ġālibah al-Quwadrīyyah</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -230,7 +230,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">ذَافِر اِبْن مُطَصِير اَلْعَبِيد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Ḏāfir ibn Muṭaṣīr al-ʿAbīd</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنذَافِر اِبْن مُطَصِير اَلْعَبِيد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Ḏāfir ibn Muṭaṣīr al-ʿAbīd</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -280,7 +280,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">هِكْمَة اِبْنَت جِحَاد اَلْعَرْشَد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Hikmah ibnat Jiḥād al-ʿAršad</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنهِكْمَة اِبْنَت جِحَاد اَلْعَرْشَد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Hikmah ibnat Jiḥād al-ʿAršad</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -330,7 +330,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">شَفِيقَة اَلْبَلُتْش</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Šafīqah al-Balutš</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنشَفِيقَة اَلْبَلُتْش</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Šafīqah al-Balutš</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -380,7 +380,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">مَسْعُودَة اِبْنَت جُمَيْل اِلدَّرْوِش</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Masʿūdah ibnat Jumayl id-Darwiš</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنمَسْعُودَة اِبْنَت جُمَيْل اِلدَّرْوِش</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Masʿūdah ibnat Jumayl id-Darwiš</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -430,7 +430,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">تَمَنَّة اِلْغَفَّرِه</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Tamannah il-Ġaffarih</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنتَمَنَّة اِلْغَفَّرِه</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Tamannah il-Ġaffarih</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -480,7 +480,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">مْوَايْد اِبْن نَاسِرُضِّين اِلْخَنِف</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Muwāyd ibn Nāsiruḍḍīn il-Ḫanif</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنمْوَايْد اِبْن نَاسِرُضِّين اِلْخَنِف</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Muwāyd ibn Nāsiruḍḍīn il-Ḫanif</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -530,7 +530,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">سَابِقَة اَلْهُسَّيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Sābiqah al-Hussayn</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنسَابِقَة اَلْهُسَّيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Sābiqah al-Hussayn</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -580,7 +580,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">شَفَاعَة اِبْنَت خَلِيفَة اِلْإِسْلَام</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Šafāʿah ibnat Ḫalīfah il-ʾIslām</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنشَفَاعَة اِبْنَت خَلِيفَة اِلْإِسْلَام</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Šafāʿah ibnat Ḫalīfah il-ʾIslām</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -630,7 +630,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">إِفَّت-جُهَيْنَة اِلإِسْمَيْل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʾIffat-Juhaynah il-ʾIsmayl</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنإِفَّت-جُهَيْنَة اِلإِسْمَيْل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʾIffat-Juhaynah il-ʾIsmayl</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -683,7 +683,7 @@
               </p>
               <p>家族：</p>
               <p>　旅の鍛冶屋である。美里子の内弟子である。</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عِلْحَم اِبْنَة مُسْعَب اِبْن وَجِيخ اِبْن هِلْمِي اِبْن قَيُّون اِبْن مُحَمَّد اِبْن مُتَمَّم اَلْجَبَّر</span>」と「<span lang="ar" dir="rtl" class="font-naskh">عِلْحَم جَبَّرَة</span>」で書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿIlḥam ibnat Musʿab ibn Wajīḫ ibn Hilmīyy ibn Qayyūn ibn Muḥammad ibn Mutammam al-Jabbar</span>」と「<span lang="ar-Latn" class="font-latin">ʿIlḥam Jabbarah</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنعِلْحَم اِبْنَة مُسْعَب اِبْن وَجِيخ اِبْن هِلْمِي اِبْن قَيُّون اِبْن مُحَمَّد اِبْن مُتَمَّم اَلْجَبَّر</span>」と「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنعِلْحَم جَبَّرَة</span>」で書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʿIlḥam ibnat Musʿab ibn Wajīḫ ibn Hilmīyy ibn Qayyūn ibn Muḥammad ibn Mutammam al-Jabbar</span>」と「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʿIlḥam Jabbarah</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -733,7 +733,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">رِفْعَة اَلْجَمَيْل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Rifʿah al-Jamayl</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنرِفْعَة اَلْجَمَيْل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Rifʿah al-Jamayl</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -783,7 +783,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">قَمْرَة اَلْخَلَف</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Qamrah al-Ḫalaf</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنقَمْرَة اَلْخَلَف</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Qamrah al-Ḫalaf</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -833,7 +833,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">أَبْدُس سَلَم اِبْن عِهَاب اَلْمُغَدَّم</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʾAbnus Salam ibn ʿIhāb al-Muġaddam</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنأَبْدُس سَلَم اِبْن عِهَاب اَلْمُغَدَّم</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʾAbnus Salam ibn ʿIhāb al-Muġaddam</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -883,7 +883,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">أَبْدُر إِبْرَاهِيم اِلْرَسُل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʾAbdur ʾIbrāhīm ir-Rasul</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنأَبْدُر إِبْرَاهِيم اِلْرَسُل</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʾAbdur ʾIbrāhīm ir-Rasul</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -933,7 +933,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">إِشَاق اَلْصَاد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʾIšāq aṣ-Ṣād</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنإِشَاق اَلْصَاد</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʾIšāq aṣ-Ṣād</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -983,7 +983,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">فَتْعْهِيَاة اِبْنَت أَبَّاد اِلسَّلَهُدِّن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Fatʿhiyāh ibnat ʾAbbād is-Salahuddin</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنفَتْعْهِيَاة اِبْنَت أَبَّاد اِلسَّلَهُدِّن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Fatʿhiyāh ibnat ʾAbbād is-Salahuddin</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -1033,7 +1033,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">طَاجُدِّين اِبْن هِلَال اَلسَّرَه</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Ṭājuddīn ibn Hilāl as-Sarah</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنطَاجُدِّين اِبْن هِلَال اَلسَّرَه</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Ṭājuddīn ibn Hilāl as-Sarah</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -1083,7 +1083,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">يَعْقُوب اِبْن لَبِيب اَلسُّلْتَنِي</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Yaʿqūb ibn Labīb as-Sultaniyy</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنيَعْقُوب اِبْن لَبِيب اَلسُّلْتَنِي</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Yaʿqūb ibn Labīb as-Sultaniyy</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -1133,7 +1133,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">وَدِيآلَة اِبْنَت حَاشِم اَلتَّبَطَبَيّ</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Wadīʾālah ibnat Ḥāšim at-Tanaṭanayy</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنوَدِيآلَة اِبْنَت حَاشِم اَلتَّبَطَبَيّ</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Wadīʾālah ibnat Ḥāšim at-Tanaṭanayy</span>」を書く。</p>
               <br>
             </div>
           </div>
@@ -1183,7 +1183,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">شُكْرِيَّة اِلأُثْمَن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">Šukriyyah il-ʾUṯman</span>」を書く。</p>
+              <p>※アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنشُكْرِيَّة اِلأُثْمَن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">Šukriyyah il-ʾUṯman</span>」を書く。</p>
               <br>
             </div>
           </div>
