--- a/html/ushie.html
+++ b/html/ushie.html
@@ -451,7 +451,7 @@
                 堀　小理女（ほり　おりめ）<br>
                 Hori Orime
               </p>
-              <p>ウープタリ語の名：<span class="font-latin">Orimeŷı Ħoriÿw</span></p>
+              <p>ウープタリ語の名：<span class="language-uuptari latin-font" title="Uuptari text">Orimeŷı Ħoriÿw</span></p>
               <p>
                 種族：<ruby>芝兎<rt>しと</rt></ruby><br>
                 能力：
@@ -504,7 +504,7 @@
                 愛称：干寺　幽美故（ほしでら　ゆみこ）<br>
                 Hoshidera Yumiko<br>
                 本名：シーリェス・フォーレシュ<br>
-                <span lang="gd">Síleas Fólais</span>
+                <span lang="gd" title="Scottish Gaelic text">Síleas Fólais</span>
               </p>
               <p>
                 種族：<ruby>魔界の猫<rt>ケット・シー</rt></ruby><br>
@@ -632,7 +632,7 @@
               </p>
               <p>家族：</p>
               <p>北方大陸から山兎である。</p>
-              <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="font-latin">Huángfǔ Jiùtù</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Huang<sup>2</sup>-fu<sup>3</sup> Chiu<sup>4</sup>-tʻu<sup>4</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Hwangfuu Jiowtuh</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">皇甫救兔</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">皇甫救兔</span>」で書く。</p>
+              <p>※代名詞は「」である。ピンインに「<span lang="zh-Latn" class="latin-font" title="Pinyin">Huángfǔ Jiùtù</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font" title="Wade-Giles">Huang<sup>2</sup>-fu<sup>3</sup> Chiu<sup>4</sup>-tʻu<sup>4</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font" title="Gwoyeu Romatzyh">Hwangfuu Jiowtuh</span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">皇甫救兔</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">皇甫救兔</span>」で書く。</p>
               <br>
             </div>
           </section>
@@ -1802,7 +1802,7 @@
                 西霧　儀子（にしきり　のりこ）<br>
                 Nishikiri Noriko
               </p>
-              <p>ウープタリ語の名：<span class="font-latin">Norikoÿæ Ñiśiķiriÿľģ</span></p>
+              <p>ウープタリ語の名：<span class="latin-font">Norikoÿæ Ñiśiķiriÿľģ</span></p>
               <p>
                 種族：芝兎<br>
                 能力：
@@ -3547,7 +3547,7 @@
                 ――スピリットカード――<br>
                 妖猫「月の引っかき傷」
               </p>
-              <p>※代名詞は「ボク」だとたまたまに「<ruby>我<rt>ウォ</rt></ruby>」である。ピンインに「<span lang="zh-Latn" class="font-latin">Zhāng Língxín</span>」で書く。ウェード式に「<span lang="zh-Latn" class="font-latin">Chang<sup>1</sup> Ling<sup>2</sup>-hsin<sup>2</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="font-latin">Jang Lingshyn</span>」で書く。繁体字に「<span lang="zh-Hant" class="font-tradhanzi">張靈尋</span>」を書く。簡体字に「<span lang="zh-Hans" class="font-simphanzi">张灵寻</span>」で書く。</p>
+              <p>※代名詞は「ボク」だとたまたまに「<ruby>我<rt>ウォ</rt></ruby>」である。ピンインに「<span lang="zh-Latn" class="latin-font" title="Pinyin">Zhāng Língxín</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font" title="Wade-Giles">Chang<sup>1</sup> Ling<sup>2</sup>-hsin<sup>2</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font" title="Gwoyeu Romatzyh">Jang Lingshyn</span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">張靈尋</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">张灵寻</span>」で書く。</p>
               <br>
               <a href="./gallery/ushie/Zhāng_Língxín.html" target="topframe">美術館へ行きますか？</a>
               <br>
@@ -4384,7 +4384,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Поран Дохт Растинӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Поран Дохт Растинӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4426,7 +4426,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Қйомарс Раҷоӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Қйомарс Раҷоӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4468,7 +4468,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Хашйар Сулаймонӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Хашйар Сулаймонӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4510,7 +4510,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Париров Фаррухзадӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Париров Фаррухзадӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4552,7 +4552,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Ҷаҳаншаҳ Хоманаӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Ҷаҳаншаҳ Хоманаӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4594,7 +4594,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Саман Хумайнӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Саман Хумайнӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4636,7 +4636,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Неға Ҷаҳангирӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Неға Ҷаҳангирӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4678,7 +4678,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Хоҷаста Ҷаҳаншаҳӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Хоҷаста Ҷаҳаншаҳӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4720,7 +4720,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Ғончеҳ-Шаҳрназ Шаҳбазӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Ғончеҳ-Шаҳрназ Шаҳбазӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4762,7 +4762,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Ҳӯшманд-Шуҳаб Шаҳлоӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Ҳӯшманд-Шуҳаб Шаҳлоӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4812,7 +4812,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Рузбеҳ Меҳрангӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Рузбеҳ Меҳрангӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4854,7 +4854,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Хосров Саларӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Хосров Саларӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4896,7 +4896,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Зардушт Кйанушӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Зардушт Кйанушӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4938,7 +4938,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Манучеҳар Варшасбӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Манучеҳар Варшасбӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -4980,7 +4980,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Ҳошанг Анӯширванӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Ҳошанг Анӯширванӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5022,7 +5022,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Ҳангаҳма Ҳумайонӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Ҳангаҳма Ҳумайонӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5064,7 +5064,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Хоршид Нилуфар Шаҳинӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Хоршид Нилуфар Шаҳинӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5106,7 +5106,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Лилий Кайхосровӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Лилий Кайхосровӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5148,7 +5148,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Гисӯ Ираҷӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Гисӯ Ираҷӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5190,7 +5190,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Афсун Арашӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Афсун Арашӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5240,7 +5240,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Сорӯш Дарйушӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Сорӯш Дарйушӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5282,7 +5282,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Рухшан Синаӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Рухшан Синаӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5324,7 +5324,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Парвазе Фаразӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Парвазе Фаразӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5366,7 +5366,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Фарҳад Шайаӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Фарҳад Шайаӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5408,7 +5408,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Бузургмеҳр Қубадӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Бузургмеҳр Қубадӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5450,7 +5450,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Сағар Таҳмасебӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Сағар Таҳмасебӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5492,7 +5492,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Катайӯн Гити Худададӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Катайӯн Гити Худададӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5534,7 +5534,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Паричеҳер Ашканӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Паричеҳер Ашканӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5576,7 +5576,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Шаҳрбано Фрайдунӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Шаҳрбано Фрайдунӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5618,7 +5618,7 @@
                 年齢：
               </p>
               <p>家族：</p>
-              <p>※キリル文字に「<span lang="tg" class="font-cyrillic">Гулнесса Йасаман Рустамӣ</span>」を書く。</p>
+              <p>※キリル文字に「<span lang="tg" class="cyrillic-font" title="Tajik text (Cyrillic)">Гулнесса Йасаман Рустамӣ</span>」を書く。</p>
               <br>
             </div>
           </section>
@@ -5651,7 +5651,7 @@
               </div>
               <p>
                 アダン・アラゴン・イ・ラベリノ<br>
-                <span lang="es">Adan Aragón y Ravelino</span>
+                <span lang="es" title="Spanish text">Adan Aragón y Ravelino</span>
               </p>
               <p>
                 種族：<br>
@@ -5692,7 +5692,7 @@
               </div>
               <p>
                 ミレヤ・カルピンテロ・チャルペンティエル・イ・ヌニェス<br>
-                <span lang="es">Mireya Carpintero Charpentier y Núñez</span>
+                <span lang="es" title="Spanish text">Mireya Carpintero Charpentier y Núñez</span>
               </p>
               <p>
                 種族：<br>
@@ -5734,7 +5734,7 @@
               </div>
               <p>
                 ウフエ・チェロ・イ・ドゥラン<br>
-                <span lang="es">Uxue Cherro y Durán</span>
+                <span lang="es" title="Spanish text">Uxue Cherro y Durán</span>
               </p>
               <p>
                 種族：<br>
@@ -5775,7 +5775,7 @@
               </div>
               <p>
                 インマクラダ・ドミンゲス・イ・ギスタイン<br>
-                <span lang="es">Inmaculada Domínguez y Gistaín</span>
+                <span lang="es" title="Spanish text">Inmaculada Domínguez y Gistaín</span>
               </p>
               <p>
                 種族：<br>
@@ -5816,7 +5816,7 @@
               </div>
               <p>
                 ホルヘ・フアレス・イ・サンチェス<br>
-                <span lang="es">Jorge Juárez y Sánchez</span>
+                <span lang="es" title="Spanish text">Jorge Juárez y Sánchez</span>
               </p>
               <p>
                 種族：<br>
@@ -5863,7 +5863,7 @@
               <p>厳しいウーパールーパー教師</p>
               <p>
                 ヒメナ・リグエレ・イ・オルドニェズ<br>
-                <span lang="es">Jimena Ligüerre y Ordóñez</span>
+                <span lang="es" title="Spanish text">Jimena Ligüerre y Ordóñez</span>
               </p>
               <p>
                 種族：ウーパールーパーの妖怪<br>
@@ -5908,7 +5908,7 @@
               </div>
               <p>
                 ホゼ・オカニャ・イ・アビラ<br>
-                <span lang="es">José Ocaña y Ávila</span>
+                <span lang="es" title="Spanish text">José Ocaña y Ávila</span>
               </p>
               <p>
                 種族：<br>
@@ -5949,7 +5949,7 @@
               </div>
               <p>
                 サンティアゴ・ニル・パハレロ・イ・ゲレロ<br>
-                <span lang="es">Santiago Nil Pajarero y Guerrero</span>
+                <span lang="es" title="Spanish text">Santiago Nil Pajarero y Guerrero</span>
               </p>
               <p>
                 種族：<br>
@@ -5990,7 +5990,7 @@
               </div>
               <p>
                 マリア・デルカルメン・ピエドラブエナ・イ・セディロ<br>
-                <span lang="es">Maria del Carmen Piedrabuena y Cedillo</span>
+                <span lang="es" title="Spanish text">Maria del Carmen Piedrabuena y Cedillo</span>
               </p>
               <p>
                 種族：<br>
@@ -6032,7 +6032,7 @@
               </div>
               <p>
                 ライア・ピエドラブエナ・イ・リグエレ<br>
-                <span lang="es">Laia Piedrabuena y Ligüerre</span>
+                <span lang="es" title="Spanish text">Laia Piedrabuena y Ligüerre</span>
               </p>
               <p>
                 種族：<br>
@@ -6079,7 +6079,7 @@
               </div>
               <p>
                 サライ・ピエドラブエナ・イ・リグエレ<br>
-                <span lang="es">Saray Piedrabuena y Ligüerre</span>
+                <span lang="es" title="Spanish text">Saray Piedrabuena y Ligüerre</span>
               </p>
               <p>
                 種族：<br>
@@ -6121,7 +6121,7 @@
               </div>
               <p>
                 グイレルモ・テヘロ・イ・フステ・イ・ペレス<br>
-                <span lang="es">Guillermo Tejero y Fusté y Pérez</span>
+                <span lang="es" title="Spanish text">Guillermo Tejero y Fusté y Pérez</span>
               </p>
               <p>
                 種族：<br>
