--- a/html/kableustein.html
+++ b/html/kableustein.html
@@ -78,7 +78,7 @@
                 </div>
                 <p>
                   ヴィクトル・ボデンシュタイン<br>
-                  <span lang="de">Viktor Bodenstein</span>
+                  <span lang="de" title="German text">Viktor Bodenstein</span>
                 </p>
                 <p>
                   種族：<br>
@@ -127,7 +127,7 @@
                 <p>放浪月の魔導士</p>
                 <p>
                   ジークリンデ・アイベンシューツ<br>
-                  <span lang="de">Sieglinde Eibenschütz</span>
+                  <span lang="de" title="German text">Sieglinde Eibenschütz</span>
                 </p>
                 <p>
                   種族：魔法使い<br>
@@ -188,7 +188,7 @@
                 </div>
                 <p>
                   ヴォルクハルト・ゴルヴィツァー<br>
-                  <span lang="de">Volkhardt Gollwitzer</span>
+                  <span lang="de" title="German text">Volkhardt Gollwitzer</span>
                 </p>
                 <p>
                   種族：<br>
@@ -236,7 +236,7 @@
                 </div>
                 <p>
                   ヴィクトーリア・ギュールデンステイト<br>
-                  <span lang="de">Viktoria Güldenstädt</span>
+                  <span lang="de" title="German text">Viktoria Güldenstädt</span>
                 </p>
                 <p>
                   種族：人間<br>
@@ -285,7 +285,7 @@
                 </div>
                 <p>
                   レオポルド・ヴォンヘルゲンレーザー<br>
-                  <span lang="de">Leopold von Hergenröther</span>
+                  <span lang="de" title="German text">Leopold von Hergenröther</span>
                 </p>
                 <p>
                   種族：人間<br>
@@ -334,7 +334,7 @@
                 </div>
                 <p>
                   オスカー・ケイストナー<br>
-                  <span lang="de">Oskar Kästner</span>
+                  <span lang="de" title="German text">Oskar Kästner</span>
                 </p>
                 <p>
                   種族：<br>
@@ -382,7 +382,7 @@
                 </div>
                 <p>
                   セラー・キルシュヴェガー<br>
-                  <span lang="de">Sarah Kirschweger</span>
+                  <span lang="de" title="German text">Sarah Kirschweger</span>
                 </p>
                 <p>
                   種族：<br>
@@ -430,7 +430,7 @@
                 </div>
                 <p>
                   イリス・クロステルマン<br>
-                  <span lang="de">Iris Klostermann</span>
+                  <span lang="de" title="German text">Iris Klostermann</span>
                 </p>
                 <p>
                   種族：<br>
@@ -478,7 +478,7 @@
                 </div>
                 <p>
                   天里愛・キュールシュマン（あまりあ・キュールシュマン）<br>
-                  <span lang="de">Amalia Kürschmann</span>
+                  <span lang="de" title="German text">Amalia Kürschmann</span>
                 </p>
                 <p>
                   種族：<br>
@@ -527,7 +527,7 @@
                 </div>
                 <p>
                   イルゼ・キュールシュマン<br>
-                  <span lang="de">Ilse Kürschmann</span>
+                  <span lang="de" title="German text">Ilse Kürschmann</span>
                 </p>
                 <p>
                   種族：<br>
@@ -576,7 +576,7 @@
                 </div>
                 <p>
                   アルフリッド・メンゲルベルク<br>
-                  <span lang="de">Alfred Mengelberg</span>
+                  <span lang="de" title="German text">Alfred Mengelberg</span>
                 </p>
                 <p>
                   種族：<br>
@@ -624,7 +624,7 @@
                 </div>
                 <p>
                   キャスパー・メーリング<br>
-                  <span lang="de">Kaspar Möhling</span>
+                  <span lang="de" title="German text">Kaspar Möhling</span>
                 </p>
                 <p>
                   種族：魔法使い<br>
@@ -674,7 +674,7 @@
                 <p>破壊的な月の魔法騎士</p>
                 <p>
                   テレサ・ノイホイッサー<br>
-                  <span lang="de">Teresa Neuhäußer</span>
+                  <span lang="de" title="German text">Teresa Neuhäußer</span>
                 </p>
                 <p>
                   種族：魔法使いと人間のハーフ<br>
@@ -724,7 +724,7 @@
                 </div>
                 <p>
                   リリ・ローゼンベルガー<br>
-                  <span lang="de">Lili Rosenberger</span>
+                  <span lang="de" title="German text">Lili Rosenberger</span>
                 </p>
                 <p>
                   種族：人間<br>
@@ -774,7 +774,7 @@
                 <p>十二の月の王</p>
                 <p>
                   シグムンド・シェーンベルガー<br>
-                  <span lang="de">Sigmund Schönberger</span>
+                  <span lang="de" title="German text">Sigmund Schönberger</span>
                 </p>
                 <p>
                   種族：人間<br>
@@ -824,7 +824,7 @@
                 </div>
                 <p>
                   ロズヴィザー・ジンメル<br>
-                  <span lang="de">Roswitha Simmel</span>
+                  <span lang="de" title="German text">Roswitha Simmel</span>
                 </p>
                 <p>
                   種族：<br>
@@ -872,7 +872,7 @@
                 </div>
                 <p>
                   ヴィルヘルム・シュパイッス<br>
-                  <span lang="de">Wilhelm Speiß</span>
+                  <span lang="de" title="German text">Wilhelm Speiß</span>
                 </p>
                 <p>
                   種族：<br>
@@ -920,7 +920,7 @@
                 </div>
                 <p>
                   ルドヴィグ・ヴォンヴァインベルガー<br>
-                  <span lang="de">Ludwig von Weinberger</span>
+                  <span lang="de" title="German text">Ludwig von Weinberger</span>
                 </p>
                 <p>
                   種族：<br>
@@ -969,7 +969,7 @@
                 <p>眠って居る月の騎士</p>
                 <p>
                   カイ・ヴェーラー<br>
-                  <span lang="de">Kai Wöhler</span>
+                  <span lang="de" title="German text">Kai Wöhler</span>
                 </p>
                 <p>
                   種族：人間<br>
@@ -1027,7 +1027,7 @@
                 <p>半魔女半妖精の大臣</p>
                 <p>
                   セラフィナ・ヴォルフェンソーン・メルゲンタラー<br>
-                  <span lang="de">Serafina Wolfensohn Mergenthaler</span>
+                  <span lang="de" title="German text">Serafina Wolfensohn Mergenthaler</span>
                 </p>
                 <p>
                   種族：魔法使いと妖精のハーフ<br>
@@ -1099,7 +1099,7 @@
                 </div>
                 <p>
                   エレノル・ベークマン<br>
-                  <span lang="de">Ellenor Boeckmann</span>
+                  <span lang="de" title="German text">Ellenor Boeckmann</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1147,7 +1147,7 @@
                 </div>
                 <p>
                   レオンハルト・ヘーフレ<br>
-                  <span lang="de">Leonhard Höfle</span>
+                  <span lang="de" title="German text">Leonhard Höfle</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1195,7 +1195,7 @@
                 </div>
                 <p>
                   クリストフ・ハンフシュテイングル<br>
-                  <span lang="de">Christof Hanfstaengl</span>
+                  <span lang="de" title="German text">Christof Hanfstaengl</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1243,7 +1243,7 @@
                 </div>
                 <p>
                   エベリン・ヘイリング<br>
-                  <span lang="de">Evelyn Haering</span>
+                  <span lang="de" title="German text">Evelyn Haering</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1291,7 +1291,7 @@
                 </div>
                 <p>
                   ルツィア・クレチュメル<br>
-                  <span lang="de">Luzia Kretschmer</span>
+                  <span lang="de" title="German text">Luzia Kretschmer</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1339,7 +1339,7 @@
                 </div>
                 <p>
                   ルウシー・オホス<br>
-                  <span lang="de">Lucy Ochs</span>
+                  <span lang="de" title="German text">Lucy Ochs</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1387,7 +1387,7 @@
                 </div>
                 <p>
                   ピート・プロホノフ<br>
-                  <span lang="de">Piet Prochnow</span>
+                  <span lang="de" title="German text">Piet Prochnow</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1435,7 +1435,7 @@
                 </div>
                 <p>
                   ジナ・ロゼンクランツ<br>
-                  <span lang="de">Sina Rosenkranz</span>
+                  <span lang="de" title="German text">Sina Rosenkranz</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1483,7 +1483,7 @@
                 </div>
                 <p>
                   エドゥアルド・シット<br>
-                  <span lang="de">Eduard Schitt</span>
+                  <span lang="de" title="German text">Eduard Schitt</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1531,7 +1531,7 @@
                 </div>
                 <p>
                   ヨハン・タイヒミュラ<br>
-                  <span lang="de">Johan Teichmüller</span>
+                  <span lang="de" title="German text">Johan Teichmüller</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1586,7 +1586,7 @@
                 </div>
                 <p>
                   ブリッタ・ベイル<br>
-                  <span lang="de">Britta Bär</span>
+                  <span lang="de" title="German text">Britta Bär</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1634,7 +1634,7 @@
                 </div>
                 <p>
                   フェリツィタス・グリュック<br>
-                  <span lang="de">Felizitas Glück</span>
+                  <span lang="de" title="German text">Felizitas Glück</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1682,7 +1682,7 @@
                 </div>
                 <p>
                   アン・ハウフェ<br>
-                  <span lang="de">Anne Hauffe</span>
+                  <span lang="de" title="German text">Anne Hauffe</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1730,7 +1730,7 @@
                 </div>
                 <p>
                   ゲオルグ・ヘーニグマン<br>
-                  <span lang="de">Georg Hönigmann</span>
+                  <span lang="de" title="German text">Georg Hönigmann</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1778,7 +1778,7 @@
                 </div>
                 =<p>
                   イル・ホプフ<br>
-                  <span lang="de">Jil Hopf</span>
+                  <span lang="de" title="German text">Jil Hopf</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1826,7 +1826,7 @@
                 </div>
                 <p>
                   フィンヤ・リュティ<br>
-                  <span lang="de">Finja Lüthi</span>
+                  <span lang="de" title="German text">Finja Lüthi</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1874,7 +1874,7 @@
                 </div>
                 <p>
                   ベネディクト・フォンペーペル<br>
-                  <span lang="de">Benedikt von Pöpel</span>
+                  <span lang="de" title="German text">Benedikt von Pöpel</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1922,7 +1922,7 @@
                 </div>
                 <p>
                   スフェン・シェルシャイト<br>
-                  <span lang="de">Sven Schellscheidt</span>
+                  <span lang="de" title="German text">Sven Schellscheidt</span>
                 </p>
                 <p>
                   種族：<br>
@@ -1970,7 +1970,7 @@
                 </div>
                 <p>
                   レフィ・フォンシュッツ<br>
-                  <span lang="de">Levi von Schutz</span>
+                  <span lang="de" title="German text">Levi von Schutz</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2018,7 +2018,7 @@
                 </div>
                 <p>
                   ヨアヒム・シュヴァイニツ<br>
-                  <span lang="de">Joachim Schweinitz</span>
+                  <span lang="de" title="German text">Joachim Schweinitz</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2088,7 +2088,7 @@
                 </div>
                 <p>
                   マドレン・ボイムレル<br>
-                  <span lang="de">Madlen Bäumler</span>
+                  <span lang="de" title="German text">Madlen Bäumler</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2136,7 +2136,7 @@
                 </div>
                 <p>
                   アロイス・ブリュヘル<br>
-                  <span lang="de">Alois Blücher</span>
+                  <span lang="de" title="German text">Alois Blücher</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2184,7 +2184,7 @@
                 </div>
                 <p>
                   フィッシュ・ファックス<br>
-                  <span lang="de">Fisch Fuchs</span>
+                  <span lang="de" title="German text">Fisch Fuchs</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2232,7 +2232,7 @@
                 </div>
                 <p>
                   ファルコ・ゲールデル<br>
-                  <span lang="de">Falko Görder</span>
+                  <span lang="de" title="German text">Falko Görder</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2280,7 +2280,7 @@
                 </div>
                 <p>
                   ヴィーブケ・ケーレル＝ケーネ<br>
-                  <span lang="de">Wiebke Koehler-Koehne</span>
+                  <span lang="de" title="German text">Wiebke Koehler-Koehne</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2328,7 +2328,7 @@
                 </div>
                 <p>
                   リケ・ニチュ<br>
-                  <span lang="de">Rike Nitzsch</span>
+                  <span lang="de" title="German text">Rike Nitzsch</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2376,7 +2376,7 @@
                 </div>
                 <p>
                   ビェールン・プライッス<br>
-                  <span lang="de">Björn Preiss</span>
+                  <span lang="de" title="German text">Björn Preiss</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2424,7 +2424,7 @@
                 </div>
                 <p>
                   イェールグ・シュヴァルツェンベルゲル<br>
-                  <span lang="de">Jörg Schwarzenberger</span>
+                  <span lang="de" title="German text">Jörg Schwarzenberger</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2472,7 +2472,7 @@
                 </div>
                 <p>
                   ティム・ヴェルゼル<br>
-                  <span lang="de">Timm Welser</span>
+                  <span lang="de" title="German text">Timm Welser</span>
                 </p>
                 <p>
                   種族：<br>
@@ -2520,7 +2520,7 @@
                 </div>
                 <p>
                   ティア・ヴィッスマン<br>
-                  <span lang="de">Tia Wissmann</span>
+                  <span lang="de" title="German text">Tia Wissmann</span>
                 </p>
                 <p>
                   種族：<br>
